added second feature

--- a/style0.html
+++ b/style0.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1 style="color:rgb(73, 120, 86);text-align:center;">Heading 1</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore sequi libero iste eum laudantium quam officia, dignissimos impedit commodi, perspiciatis sit aliquid explicabo veniam. Suscipit exercitationem reiciendis asperiores architecto dignissimos.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, voluptatum numquam! Saepe dolorum deserunt non rerum repellendus ab exercitationem soluta, minus praesentium autem quia quos ipsum pariatur. Eligendi, cum ad.</p>
+        <p style="color:magenta;font-size: 18px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore sequi libero iste eum laudantium quam officia, dignissimos impedit commodi, perspiciatis sit aliquid explicabo veniam. Suscipit exercitationem reiciendis asperiores architecto dignissimos.</p>
+        <p style="color:darkblue;font-style: bold;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, voluptatum numquam! Saepe dolorum deserunt non rerum repellendus ab exercitationem soluta, minus praesentium autem quia quos ipsum pariatur. Eligendi, cum ad.</p>
     </body>
 </html>
