--- a/style1.html
+++ b/style1.html
@@ -7,6 +7,11 @@
                 color:blue;
                 text-align:center;
             }
+            p{
+                color:magenta;
+                font-size: 18px;
+                font-family: Arial,Serif;
+            }
         </style>
     </head>
     <body>
