--- a/testbranch.html
+++ b/testbranch.html
@@ -7,8 +7,6 @@
         <h2>Master Branch</h2>
         This is master branch.
         <h4>New Feature 1</h4>
-        This is new feature 1.
-        <h4> Feature 2</h4>
-        This is second feature.
+        This is new feature.
     </body>
 </html>
