added new feature 1

--- a/testbranch.html
+++ b/testbranch.html
@@ -6,6 +6,7 @@
     <body>
         <h2>Master Branch</h2>
         This is master branch.
-        
+        <h4>New Feature 1</h4>
+        This is feature 1.
     </body>
 </html>
