added new feature

--- a/testbranch.html
+++ b/testbranch.html
@@ -6,6 +6,8 @@
     <body>
         <h2>Master Branch</h2>
         This is master branch.
+        <h4>New Feature 2</h4>
+        This is second feature.
         
     </body>
 </html>
