updated for remote version

--- a/testbranch.html
+++ b/testbranch.html
@@ -10,6 +10,8 @@
         This is feature 1.
         <h4>New Feature 2</h4>
         This is second feature.
+        <h4> Remote Version </h4>
+        This is for remotes.
         
     </body>
 </html>
