--- a/testbranch.html
+++ b/testbranch.html
@@ -11,7 +11,7 @@
         <h4>New Feature 2</h4>
         This is second feature.
         <h4> Remote Version </h4>
-        This is for remotes.
+        This is for remotes. Fetch and Merge the origin version with master.
         
     </body>
 </html>
