--- a/tables.html
+++ b/tables.html
@@ -2,6 +2,16 @@
 <html>
     <head>
         <title>Test Tables</title>
+        <style>
+            table{
+                border:darkgreen solid 2px;
+                border-collapse: collapse;
+            }
+            th,td{
+                border:red solid;
+            }
+            
+        </style>
     </head>
     <body>
         <table>
