--- a/testbranch1.html
+++ b/testbranch1.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         This is branch1.
-        This is testing for fetch and merge.
+        This is testing for fetch and merge.Hello from merge.
     </body>
 </html>
