--- a/testbranch1.html
+++ b/testbranch1.html
@@ -4,7 +4,7 @@
 
     </head>
     <body>
-        This is branch1.
+       Branch1 and Remote
         Hello Testing from remote.
         Fetch and merge.
     </body>
