--- a/testbranch1.html
+++ b/testbranch1.html
@@ -5,6 +5,7 @@
     </head>
     <body>
        Branch1 and Remote
+        I'm khaing from remote. this is updated from remote.
         Hello Testing from remote.
         Fetch and merge.
     </body>
