--- a/testbranch1.html
+++ b/testbranch1.html
@@ -4,8 +4,8 @@
 
     </head>
     <body>
-       Branch1 and Remote
-        I'm khaing swe win from remote. this is updated from remote.
+       Branch1 and Remote.
+        Khaing from remote. this is updated from remote.
         Hello Testing from remote.
         Fetch and merge.
     </body>
