--- a/testbranch1.html
+++ b/testbranch1.html
@@ -5,7 +5,7 @@
     </head>
     <body>
        Branch1 and Remote.
-        Khaing from remote. this is updated from remote.
+       Remote and merge tested by khaing.
         Hello Testing from remote.
         Fetch and merge.
     </body>
