--- a/testbranch1.html
+++ b/testbranch1.html
@@ -4,14 +4,9 @@
 
     </head>
     <body>
-        This is branch1.
-        Hello Testing.Hello From Local.
-       Branch1 and Remote
-        I'm khaing swe win from remote. this is updated from remote.
-       Branch1 and Remote.
-       Remote and merge tested by khaing.
-        Hello Testing from remote.
-        Fetch and merge.
-        New line1 from remote update.
+        Master
+        This is Master.
+        Feature
+        This is feature.
     </body>
 </html>
