--- a/testbranch1.html
+++ b/testbranch1.html
@@ -4,10 +4,9 @@
 
     </head>
     <body>
-       Branch1 and Remote.
-       Remote and merge tested by khaing.
-        Hello Testing from remote.
-        Fetch and merge.
-        New line1 from remote update.
+       Master.
+        This is master.
+        Feature.
+        Feature and merge with origin master.
     </body>
 </html>
