--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <div class="header">
-                <div class="logo"><img src="Images/contact.png" width="200px" class="imagelogo"></div>
+                <img src="Images/contact.png" width="200px">
                 <div class="navdiv">
                     <ul>                 
                         <li>Home</li>
