--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
         <div class="container">
 
             <div class="header"> 
-                <div class="logo"><img src="Images/contact.png" width="200px" class="imagelogo"></div>
+                <div class="logo"><img src="/Images/contact.png" width="200px" class="imagelogo"></div>
 
             
                 <div class="navdiv">
