--- a/Assignment1/service.html
+++ b/Assignment1/service.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <div class="header">
-                <div class="logo"><img src="Image/contact.png" width="200px" class="imagelogo"></div>
+                <div class="logo"><img src="Image/stl_logo.png" width="200px" class="imagelogo"></div>
                 <div class="navdiv">
                     <ul type="none">                 
                         <li>Home</li>
@@ -27,15 +27,15 @@
                                     You’re Solution for Industrial Development and Construction
                                     in Myanmar.
                                     <ul type="none">
-                                        <li><img src="Image/mark.PNG" width="15px">&nbsp;
+                                        <li><img src="Image/ticklogo.png" width="15px">&nbsp;
                                             Design & Build</li>
-                                        <li><img src="Image/mark.PNG" width="15px">&nbsp;
+                                        <li><img src="Image/ticklogo.png" width="15px">&nbsp;
                                             Turnkey</li>
-                                        <li><img src="Image/mark.PNG" width="15px">&nbsp;
+                                        <li><img src="Image/ticklogo.png" width="15px">&nbsp;
                                             Joint Venture</li>
-                                        <li><img src="Image/mark.PNG" width="15px">&nbsp;
+                                        <li><img src="Image/ticklogo.png" width="15px">&nbsp;
                                             Business Consultancy</li>
-                                        <li><img src="Image/mark.PNG" width="15px">&nbsp;
+                                        <li><img src="Image/ticklogo.png" width="15px">&nbsp;
                                             Main Contractor</li>
                                     </ul><br><br><br><br><br><br>
                                     Whatever we do, wherever are in construction, the impact for time, 
@@ -55,18 +55,18 @@
                                 <table border="0">
                                     <tr>
                                         <td class="photo">
-                                            <img src="Image/s1.jpg"width="100%">
+                                            <img src="Image/1_Services.jpg"width="100%">
                                         </td>
                                         <td>
-                                            <img src="Image/s3.jpg"width="100%">
+                                            <img src="Image/2_Services.jpg"width="100%">
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            <img src="Image/s2.jpg"width="100%">
+                                            <img src="Image/3_Services.jpg"width="100%">
                                         </td>
                                         <td>
-                                            <img src="Image/s4.jpg"width="100%">
+                                            <img src="Image/4_Services.jpg"width="100%">
                                         </td>
                                     </tr>
                             </table>
@@ -87,7 +87,7 @@
                     <tr>
                         <td>Home</td>
                         <td>
-                            <img src="Image/location.PNG" width="20px">&nbsp;&nbsp;&nbsp;
+                            <img src="Image/locationlogo.png" width="20px">&nbsp;&nbsp;&nbsp;
                                 Room – 1008, 10th Floor, Building - B,<br>
                                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                 50th Street Condominium,
@@ -115,7 +115,7 @@
                     <tr>
                         <td>Projects</td>
                         <td>
-                            <img src="Image/phone.PNG" width="20px">&nbsp;&nbsp;&nbsp;
+                            <img src="Image/phonelogo.png" width="20px">&nbsp;&nbsp;&nbsp;
                                         (+95) 9 45 12 999 88, (+95) 9 535 1714
                         </td>
                         
@@ -123,7 +123,7 @@
                     <tr>
                         <td>Contact</td>
                         <td>
-                            <img src="Image/mail.PNG" width="20px">&nbsp;&nbsp;&nbsp;
+                            <img src="Image/maillogo.png" width="20px">&nbsp;&nbsp;&nbsp;
                                         info@sterling-myanmar.com
                         </td>
                         
