--- a/Assignment1/ucsh.html
+++ b/Assignment1/ucsh.html
@@ -8,10 +8,10 @@
         <div class="container">
 
             <div class="header">
-                <div class="logo"><img src="Image/ucsh.jpg" width="150px" class="imagelogo"></div>
+                <div class="logo"><img src="Image/ucshlogo.jpg" width="150px" class="imagelogo"></div>
                 <div class="title"><h3 class="fontstyle">University Journal of ICT in Multidisciplinary Issues on Art & Science, 
                     Engineering, Economics and Education (Volume-1)</h3></div>
-                <div class="nextlogo"><img src="Image/ujim.jpg" width="150px" class="nextimagelogo"></div>
+                <div class="nextlogo"><img src="Image/journal_logo.png" width="150px" class="nextimagelogo"></div>
             </div>
 
             <div class="navbar">
@@ -125,7 +125,7 @@
                             </td>
                             <td>
                                 <div class="edit box0">
-                                    <table border="0 src">
+                                    <table border="0">
                                         <tr>
                                             <th colspan="2" align="left">Editorial Chair<br>Dr . Yuzana</th>
                                         </tr>
