--- a/Assignment1/contact.html
+++ b/Assignment1/contact.html
@@ -26,7 +26,7 @@
                 <table class="navtable" border="0">
                     <tr>
                         <td class="office">
-                            <h3>OFFICE<hr></h3>
+                            <h3>OFFICE<hr color="green" width="30" align="left"></h3>
                             <ul>
                                 <li><img src="Image/locationlogo.png" width="20px">&nbsp;&nbsp;&nbsp;
                                     Room – 1008, 10th Floor, Building - B,<br>
@@ -47,7 +47,7 @@
                         </td>
                         <td>
                             <h3>CONTACT US</h3>
-                            <hr>
+                            <hr color="green" width="200" align="left">
                             <div class="divform">
                                 <form>
                                     <label for="name">Name:</label><br>
@@ -74,10 +74,10 @@
                     <div class="end">
                     <table border="0">
                         <tr>
-                                <th>QUICK LINK<hr></th>
-                                <th>CONTACT US<hr></th>
-                                <th>FACEBOOK LINK<hr></th>
-                            </td>
+                            <th align="left">QUICK LINK<hr color="green" width="30" align="left"></th>
+                            <th align="left">CONTACT US<hr color="green" width="30" align="left"></th>
+                            <th align="left">FACEBOOK LINK<hr color="green" width="30" align="left"></th>
+                            
                         </tr>
                         <tr>
                             <td>Home</td>
@@ -88,6 +88,8 @@
                                     50th Street Condominium,
                             </td>
                             <td rowspan="5">
+                                <a href="https://www.facebook.com/Sterling-Industrial-Technologies-Co-Ltd-167138143479014/">
+                                    Sterling Industrial Technologies Co., Ltd.</a><br>
                                 <img src="Image/facebook.PNG" width="200px">
                             </td>
                         </tr>
