--- a/Assignment1/service.html
+++ b/Assignment1/service.html
@@ -50,7 +50,7 @@
                             </div>
                         </td>
                         <td>
-                            <h3>OUR SERVICES<hr></h3>
+                            <h3>OUR SERVICES<hr color="green" width="200" align="left"></h3>
                             <div class="image">
                                 <table border="0">
                                     <tr>
@@ -79,10 +79,10 @@
                 <div class="end">
                 <table border="0">
                     <tr>
-                            <th>QUICK LINK<hr></th>
-                            <th>CONTACT US<hr></th>
-                            <th>FACEBOOK LINK<hr></th>
-                        </td>
+                        <th align="left">QUICK LINK<hr color="green" width="30" align="left"></th>
+                        <th align="left">CONTACT US<hr color="green" width="30" align="left"></th>
+                        <th align="left">FACEBOOK LINK<hr color="green" width="30" align="left"></th>
+                        
                     </tr>
                     <tr>
                         <td>Home</td>
@@ -93,7 +93,10 @@
                                 50th Street Condominium,
                         </td>
                         <td rowspan="5">
+                            <a href="https://www.facebook.com/Sterling-Industrial-Technologies-Co-Ltd-167138143479014/">
+                                Sterling Industrial Technologies Co., Ltd.</a><br>
                             <img src="Image/facebook.PNG" width="200px">
+                            
                         </td>
                     </tr>
                     <tr>
