--- a/service.html
+++ b/service.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <div class="header">
-                <div class="logo"><img src="Images/contact.png" width="200px" class="imagelogo"></div>
+                <div class="logo"><img src="Images/stl_logo.png" width="200px" class="imagelogo"></div>
                 <div class="navdiv">
                     <ul type="none">                 
                         <li>Home</li>
@@ -27,15 +27,15 @@
                                     You’re Solution for Industrial Development and Construction
                                     in Myanmar.
                                     <ul type="none">
-                                        <li><img src="Images/mark.PNG" width="15px">&nbsp;
+                                        <li><img src="Images/ticklogo.png" width="15px">&nbsp;
                                             Design & Build</li>
-                                        <li><img src="Images/mark.PNG" width="15px">&nbsp;
+                                        <li><img src="Images/ticklogo.png" width="15px">&nbsp;
                                             Turnkey</li>
-                                        <li><img src="Images/mark.PNG" width="15px">&nbsp;
+                                        <li><img src="Images/ticklogo.png" width="15px">&nbsp;
                                             Joint Venture</li>
-                                        <li><img src="Images/mark.PNG" width="15px">&nbsp;
+                                        <li><img src="Images/ticklogo.png" width="15px">&nbsp;
                                             Business Consultancy</li>
-                                        <li><img src="Images/mark.PNG" width="15px">&nbsp;
+                                        <li><img src="Images/ticklogo.png" width="15px">&nbsp;
                                             Main Contractor</li>
                                     </ul><br><br><br><br><br><br>
                                     Whatever we do, wherever are in construction, the impact for time, 
@@ -50,23 +50,23 @@
                             </div>
                         </td>
                         <td>
-                            <h3>OUR SERVICES<hr></h3>
+                            <h3>OUR SERVICES<hr color="green" width="200" align="left"></h3>
                             <div class="image">
                                 <table border="0">
                                     <tr>
                                         <td class="photo">
-                                            <img src="Images/s1.jpg"width="100%">
+                                            <img src="Images/1_Services.jpg"width="100%">
                                         </td>
                                         <td>
-                                            <img src="Images/s3.jpg"width="100%">
+                                            <img src="Images/2_Services.jpg"width="100%">
                                         </td>
                                     </tr>
                                     <tr>
                                         <td>
-                                            <img src="Images/s2.jpg"width="100%">
+                                            <img src="Images/3_Services.jpg"width="100%">
                                         </td>
                                         <td>
-                                            <img src="Images/s4.jpg"width="100%">
+                                            <img src="Images/4_Services.jpg"width="100%">
                                         </td>
                                     </tr>
                             </table>
@@ -79,20 +79,21 @@
                 <div class="end">
                 <table border="0">
                     <tr>
-                            <th>QUICK LINK<hr></th>
-                            <th>CONTACT US<hr></th>
-                            <th>FACEBOOK LINK<hr></th>
-                        </td>
+                        <th align="left">QUICK LINK<hr color="green" width="30" align="left"></th>
+                        <th align="left">CONTACT US<hr color="green" width="30" align="left"></th>
+                        <th align="left">FACEBOOK LINK<hr color="green" width="30" align="left"></th>
                     </tr>
                     <tr>
                         <td>Home</td>
                         <td>
-                            <img src="Images/location.PNG" width="20px">&nbsp;&nbsp;&nbsp;
+                            <img src="Images/locationlogo.png" width="20px">&nbsp;&nbsp;&nbsp;
                                 Room – 1008, 10th Floor, Building - B,<br>
                                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                 50th Street Condominium,
                         </td>
                         <td rowspan="5">
+                            <a href="https://www.facebook.com/Sterling-Industrial-Technologies-Co-Ltd-167138143479014/">
+                                Sterling Industrial Technologies Co., Ltd.</a><br>
                             <img src="Images/facebook.PNG" width="200px">
                         </td>
                     </tr>
@@ -115,7 +116,7 @@
                     <tr>
                         <td>Projects</td>
                         <td>
-                            <img src="Images/phone.PNG" width="20px">&nbsp;&nbsp;&nbsp;
+                            <img src="Images/phonelogo.png" width="20px">&nbsp;&nbsp;&nbsp;
                                         (+95) 9 45 12 999 88, (+95) 9 535 1714
                         </td>
                         
@@ -123,7 +124,7 @@
                     <tr>
                         <td>Contact</td>
                         <td>
-                            <img src="Images/mail.PNG" width="20px">&nbsp;&nbsp;&nbsp;
+                            <img src="Images/maillogo.png" width="20px">&nbsp;&nbsp;&nbsp;
                                         info@sterling-myanmar.com
                         </td>
                         
