--- a/ucsh.html
+++ b/ucsh.html
@@ -8,10 +8,10 @@
         <div class="container">
 
             <div class="header">
-                <div class="logo"><img src="Images/ucsh.jpg" width="150px" class="imagelogo"></div>
+                <div class="logo"><img src="Images/ucshlogo.jpg" width="150px" class="imagelogo"></div>
                 <div class="title"><h3 class="fontstyle">University Journal of ICT in Multidisciplinary Issues on Art & Science, 
                     Engineering, Economics and Education (Volume-1)</h3></div>
-                <div class="nextlogo"><img src="Images/ujim.jpg" width="150px" class="nextimagelogo"></div>
+                <div class="nextlogo"><img src="Images/journal_logo.png" width="150px" class="nextimagelogo"></div>
             </div>
 
             <div class="navbar">
