added second feature

--- a/headings.html
+++ b/headings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Heading Test</title>
+        <title>Test Headings</title>
     </head>
     <body>
         <h1>This is h1</h1>
