--- a/forms.html
+++ b/forms.html
@@ -7,7 +7,7 @@
         <form>
             <label for="fname">First Name:</label><br>
             <input type="text" id="fname" name="fname"><br>
-            <label for="fname">Last Name:</label><br>
+            <label for="lname">Last Name:</label><br>
             <input type="text" id="lname" name="lname"><br>
             <label for="browser">Choose your favour browser:</label><br>
             <input list="languages" name="language">
