--- a/testbranch.html
+++ b/testbranch.html
@@ -10,6 +10,8 @@
         This is new feature 1.
         <h4>Feature 2</h4>
         This is second feature.
+        <h4>Remote Version</h4>
+        Fetch and Merge with origin version.
         
     </body>
 </html>
