--- a/testbranch.html
+++ b/testbranch.html
@@ -11,7 +11,6 @@
         <h4>Feature 2</h4>
         This is second feature.
         <h4>Remote Version</h4>
-        
-        This is for remotes.Fetch and Merge the origin version with master.
+        Fetch and merge with origin version.
     </body>
 </html>
