--- a/testbranch.html
+++ b/testbranch.html
@@ -11,6 +11,6 @@
         <h4>Feature 2</h4>
         This is second feature.
         <h4>Remote Version</h4>
-        Fetch and merge with origin version.
+        Fetch and merge the origin version with master.
     </body>
 </html>
