--- a/Assignment2/myprofile.html
+++ b/Assignment2/myprofile.html
@@ -116,6 +116,7 @@
                     <div class="interest">
                         <h3 id="interest">INTERESTS</h3>
                         <button>Listening to Music</button>
+                        <button>Singing</button>
                         <button>Watching movie</button>
                         <button>Travelling</button>
                         <button>Taking Photo</button>
