--- a/Assignment3/holidayhome.html
+++ b/Assignment3/holidayhome.html
@@ -297,7 +297,8 @@
             <div class="col-sm-4">
                 <div class="card" style="border: white 0px;">
                     <div class="card-body" style="background-color: whitesmoke;">
-                        <img src="Image/lisa.jpg" width="30%" height="70px" style="margin-left: 100px; border-radius: 100rem;">
+                        <img src="Image/lisa.jpg" width="30%" height="70px" style="margin-left: 100px; border-radius: 50%;" 
+                        class="rounded-circle">
                         <P>Lalisa Manoban, better known by the mononym Lisa, is a Thai rapper,
                             singer and dancer based in South Korea as a member of the South Korean 
                             girl group Blackpink under YG Entertainment.Born as Pranpriya 
@@ -311,7 +312,8 @@
             <div class="col-sm-4">
                 <div class="card" style="border: white 0px;">
                     <div class="card-body" style="background-color: whitesmoke;">
-                        <img src="Image/harry.PNG" width="30%" height="70px" style="margin-left: 100px; border-radius: 100rem;">
+                        <img src="Image/harry.PNG" width="30%" height="70px" style="margin-left: 100px; border-radius: 50%;" 
+                        class="rounded-circle">
                         <P>Daniel Jacob Radcliffe (born 23 July 1989)is a British actor and producer. 
                             He is best known for playing Harry Potter in the Harry Potter film series during
                             his adolescence and early adulthood.Born and raised in London. 
@@ -325,7 +327,8 @@
             <div class="col-sm-4">
                 <div class="card" style="border: white 0px;">
                     <div class="card-body" style="background-color: whitesmoke;">
-                        <img src="Image/k.jpg" width="30%" height="70px" style="margin-left: 100px; border-radius: 100rem;">
+                        <img src="Image/k.jpg" width="30%" height="70px" style="margin-left: 100px; border-radius: 50%;"
+                            class="rounded-circle">
                         <P>Kim Yoo-jung was born in Seoul, South Korea on September 22, 1999 .Kim Yoo-jung is a South Korean actress. After her acting debut in 2003, she became 
                             one of the best known child actresses in Korea and since then, has transitioned into teen roles by starring 
                             in television series Dong Yi, Moon Embracing the Sun, May Queen and Angry Mom.
