--- a/JS/testcounter1.html
+++ b/JS/testcounter1.html
@@ -9,7 +9,7 @@
                 document.querySelector('.counter').innerHTML=counter;
 
                 if(counter % 10 === 0){
-                    alert('Counter is at ${counter}!');
+                    alert(`Counter is at ${counter}!`);
                 }
             }
         </script>
