--- a/JS/testcounter2.html
+++ b/JS/testcounter2.html
@@ -12,7 +12,7 @@
                 document.querySelector('.counter').innerHTML=counter;
 
                 if(counter % 10 === 0){
-                   alert('Counter is at ${counter}!');
+                   alert(`Counter is at ${counter}!`);
                 }
             }
         </script>
